[package]
name = "integ8-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Add registry iz to .cargo/config.toml

#.cargo/config.toml
#[registries.iz]
#index = "https://bitbucket.org/integralzonesoftware/cargo-registry-index"

[dependencies]
integ8-sdk =  { version ="0.1.1", registry = "iz" }

[lib]
crate-type = ['cdylib']