[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Add registry iz to .cargo/config.toml

#.cargo/config.toml
#[registries.iz]
#index = "https://bitbucket.org/integralzonesoftware/cargo-registry-index"

[dependencies]
integ8-sdk =  { version ="0.1.1", registry = "iz" }
serde_json = "1.0.93"
async-ffi = { version ="0.4.1"}


[lib]
crate-type = ['cdylib']